--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <header class="grid grid-middle push-0 island" role="banner" id="top">
     <div class="unit xs-1 s-1 m-1-3 island-1-2 push-1-2">
-      <img class="img-flex" src="images/logo-small.png" alt="RecordBox logo">
+      <img class="img-flex" src="images/logo.png" alt="RecordBox logo">
     </div>
     <div class="unit xs-1 s-1 m-2-3 push-1-2">
       <nav id="nav" role="navigation">
