--- a/tour.html
+++ b/tour.html
@@ -19,7 +19,7 @@
 
   <header role="banner" class="grid grid-middle push-0 island" id="top">
     <div class="unit xs-1 s-1 m-1-3 island-1-2 push-1-2">
-      <img class="img-flex" src="images/logo-small.png" alt="RecordBox logo">
+      <img class="img-flex" src="images/logo.png" alt="RecordBox logo">
     </div>
     <div class="unit xs-1 s-1 m-2-3 push-1-2">
       <nav id="nav" role="navigation">
@@ -42,50 +42,52 @@
       </div>
     </section>
     <section class="island">
-      <table class="valign-middle">
-        <caption class="push-0 bold not-italic">
-          <h2 class="push pad-t gutter-1-4 tera">Our Plans</h2>
-        </caption>
-        <thead class="island">
-          <tr>
-            <th scope="col">
-              <p class="push-0 gutter-1-4 text-left">FREE TRIAL</p>
-            </th>
-            <th scope="col">
-              <p class="push-0 gutter-1-4 text-left">MEMBER</p>
-            </th>
-            <th scope="col">
-              <p class="push-0 gutter-1-4 text-left">SUBSCRIBE</p>
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-              <p class="milli push-1-2 pad-t-1-2 gutter-1-4 valign-middle text-left">We at RecordBox want you to see first hand just how fantastic our subscription service could be for your every day listening life. Enjoy full access to our enormous music database</p>
-            </td>
-            <td>
-              <p class="milli push-1-2 pad-t-1-2 gutter-1-4 valign-middle text-left">Become a member and get access to our full database of music, articles, and participation in our amazing community forums</p>
-            </td>
-            <td>
-              <p class="milli push-1-2 pad-t-1-2 gutter-1-4 valign-middle text-left">RecordBox’s 1 year Subscription Service offers the chance to get custom curated content straight from the brilliant minds of our team of music experts. Help lift the 20th Century’s best music into the modern era — and your inbox.</p>
-            </td>
-          </tr>
-        </tbody>
-        <tfoot>
-          <tr>
-            <td>
-              <p class="push-0 gutter-1-4 text-left">0$</p>
-            </td>
-            <td>
-              <p class="push-0 gutter-1-4 text-left">5$</p>
-            </td>
-            <td>
-              <p class="push-0 gutter-1-4 text-left">15$</p>
-            </td>
-          </tr>
-        </tfoot>
-      </table>
+      <div class="scrollable">
+        <table class="valign-middle">
+          <caption class="push-0 bold not-italic">
+            <h2 class="push pad-t gutter-1-4 tera">Our Plans</h2>
+          </caption>
+          <thead class="island">
+            <tr>
+              <th scope="col" class="table-width">
+                <p class="push-0 gutter-1-4 text-left">FREE TRIAL</p>
+              </th>
+              <th scope="col" class="table-width">
+                <p class="push-0 gutter-1-4 text-left">MEMBER</p>
+              </th>
+              <th scope="col" class="table-width">
+                <p class="push-0 gutter-1-4 text-left">SUBSCRIBE</p>
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <p class="milli push-1-2 pad-t-1-2 gutter-1-4 valign-middle text-left">We at RecordBox want you to see first hand just how fantastic our subscription service could be for your every day listening life. Enjoy full access to our enormous music database</p>
+              </td>
+              <td>
+                <p class="milli push-1-2 pad-t-1-2 gutter-1-4 valign-middle text-left">Become a member and get access to our full database of music, articles, and participation in our amazing community forums</p>
+              </td>
+              <td>
+                <p class="milli push-1-2 pad-t-1-2 gutter-1-4 valign-middle text-left">RecordBox’s 1 year Subscription Service offers the chance to get custom curated content straight from the brilliant minds of our team of music experts. Help lift the 20th Century’s best music into the modern era — and your inbox.</p>
+              </td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr>
+              <td>
+                <p class="push-0 gutter-1-4 text-left">0$</p>
+              </td>
+              <td>
+                <p class="push-0 gutter-1-4 text-left">5$</p>
+              </td>
+              <td>
+                <p class="push-0 gutter-1-4 text-left">15$</p>
+              </td>
+            </tr>
+          </tfoot>
+        </table>
+      </div>
     </section>
     <div class="push-2 text-center">
       <a class="orange-blue-btn btn island-1-4 gutter-1-2" href="sign-up.html" aria-label="sign-up link">SIGN UP</a>
